[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
# description = "project description"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-keywords-field
# keywords = ["keyword"]
license = "MIT"
name = "bevy-neural"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/bevy-neural"
version = "0.0.0-SNAPSHOT"

[dependencies]
